# vawd-image

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/lib/: boto3.py  config.py  kafka.py  pinecone_config.py
app/routes/client/: index.py  prompt.py
app/routes/model/: CLIP.py  clip.py  consumer.py  format.py  index.py
vawd_auth/: go.mod  go.sum  main.go
vawd_auth/config/: aws.go  claims.go  environment.go  googleConfig.go
vawd_auth/database/: db.go  model.go
vawd_auth/middleware/: auth.go
vawd_auth/migrations/: migrations.go
vawd_auth/routes/authentication/: authRoutes.go
vawd_auth/routes/authentication/google/: callback.go  googleLogin.go
vawd_auth/routes/authentication/user/: create.go  delete.go  get.go  getUserImage.go  login.go  logout.go  me.go  refresh.go  udpate.go  uploadProfilePic.go
vawd_auth/routes/posts/: imageRoutes.go
vawd_auth/routes/posts/images/: delete.go  getAllImages.go  search.go  upload.go  (+1 more)
vawd_auth/tokens/: functions.go
vawd_client/: next.config.ts  package-lock.json  package.json  proxy.ts  test.ts
vawd_client/app/: globals.css  layout.tsx  loading.tsx  page.tsx
vawd_client/app/(dashboard)/: layout.tsx
vawd_client/app/components/: HeroAsciiArt.tsx  LoginForm.tsx  LogoutButton.tsx  Navbar.tsx  SignupForm.tsx  ThemeToggle.tsx
vawd_client/app/context/: ThemeContext.tsx
vawd_client/app/login/: page.tsx
vawd_client/app/profile/: page.tsx
vawd_client/app/signup/: page.tsx
vawd_client/components/ui/: ascii-art.tsx
vawd_client/context/: session.tsx
vawd_client/lib/: auth.ts
(+8 files in other folders)
